# dorkator

./: .gitignore  LICENSE  README.md  dorks.yaml  pyproject.toml
.github/workflows/: pages.yml
docs/: index.html
dorkator/: __init__.py  __main__.py  cli.py  core.py  exporters.py  opener.py  wizard.py
dorkator/templates/: report.html.j2  static_site.html.j2
examples/: sample-example.html  sample-example.json  sample-example.md
